ドキュメント用のOMakefile追加
--HG--
rename : docs/ja/static/favicon.ico => docs/ja/source/static/favicon.ico
rename : docs/ja/static/images/home.png => docs/ja/source/static/images/home.png

--- a/.hgignore
+++ b/.hgignore
@@ -3,7 +3,10 @@ syntax:glob
 *.swp
 *.orig
 *.egg-info
+*.omc
+*.omakedb
+*.omakedb.lock
 
 syntax:regexp
 ^test\.py$
-^docs/ja/_build/
+^docs/ja/build/
